--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
-plugins {
-  id 'com.android.application'
-  id 'kotlin-android'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
   compileSdkVersion 30
@@ -48,4 +48,20 @@ dependencies {
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
   //coroutines
   implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
+
+  // dependency injection
+  implementation "com.google.dagger:dagger:$dagger2_version"
+  implementation "com.google.dagger:dagger-android:$dagger2_version"
+  implementation "com.google.dagger:dagger-android-support:$dagger2_version"
+  kapt "com.google.dagger:dagger-compiler:$dagger2_version"
+  kapt "com.google.dagger:dagger-android-processor:$dagger2_version"
+  annotationProcessor "com.google.dagger:dagger-compiler:$dagger2_version"
+  compileOnly 'javax.annotation:jsr250-api:1.0'
+  implementation 'javax.inject:javax.inject:1'
+
+  annotationProcessor "com.google.dagger:dagger-android-processor:2.24"
+}
+
+kapt {
+  generateStubs = true
 }
