--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <service android:name=".main.service.ServiceNotification" />
+    <service android:name="ru.sulatskov.superapp.main.screens.service_screen.ServiceNotification" />
   </application>
 
 </manifest>
