feature: правки в тулбаре, добавлен textView screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
 
     annotationProcessor "com.google.dagger:dagger-android-processor:2.24"
+
+    // Kotlin
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 }
 
 kapt {
