feature: add textView fonts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         </activity>
         <service android:name="ru.sulatskov.superapp.main.screens.service_screen.ServiceNotification" />
         <receiver android:name=".main.screens.service_screen.ToastReviver" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
