--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,9 @@ buildscript {
 }
 
 ext {
-  dagger2_version = '2.24'
+  dagger2_version = "2.24"
   fragment_version = "1.2.5"
+  work_version = "2.5.0"
  }
 
 allprojects {
